--- a/index.html
+++ b/index.html
@@ -1,11 +1,210 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1> Hello, World! </h1>
-</body>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Achraf El Khamsi</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="homepage is-preload">
+		<div id="page-wrapper">
+
+			<!-- Header -->
+				<section id="header">
+
+					<!-- Logo -->
+						<h1><a href="index.html">Achraf El Khamsi</a></h1>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li class="current"><a href="index.html">Home</a></li>
+								<li>
+									<a href="#">Projects</a>
+									<ul>
+										<li><a href="reversi-ai.html">Reversi AI</a></li>
+										<li><a href="sync.html">Sync</a></li>
+										<li><a href="compiler.html">Compiler / Interpreter</a></li>
+										<li><a href="hands-on.html">Hands On</a></li>
+										<li><a href="arcade.html">The Arcade Playground</a></li>
+										<li><a href="battle-of-wits.html">Battle of Wits</a></li>
+									</ul>
+								</li>
+								<li><a href="#footer">Contact</a></li>
+								<li><a href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A11aea02d-6e28-44ba-a4c2-80465fd89757" target="_blank"><i class="far fa-file" style="margin-right:5px"></i> Resume</a></li>
+							</ul>
+						</nav>
+
+					<!-- Banner -->
+						<section id="banner">
+							<header>
+								<h2>Hello. I am Achraf.</h2>
+								<p>Engineering Student in Computer Science. </p>
+							</header>
+						</section>
+					
+				</section>
+
+			<!-- Main -->
+				<section id="main">
+					<div class="container">
+						<div class="row">
+							<div class="col-12">
+
+								<!-- Portfolio -->
+									<section>
+										<header class="major">
+											<h2>My Projects</h2>
+										</header>
+										<div class="row">
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="reversi-ai.html" class="image featured"><img src="images/reversi.png" alt="" /></a>
+													<header>
+														<h3>Reversi AI</h3>
+													</header>
+													<p>An AI that plays the game <i>Reversi</i> according to several techniques and search algorithms.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="reversi-ai.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="compiler.html" class="image featured"><img src="images/compiler.jpg" alt="" /></a>
+													<header>
+														<h3>Compiler / Interpreter</h3>
+													</header>
+													<p> A compiler / interpreter of a hybrid language</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="compiler.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="sync.html" class="image featured"><img src="images/sync.png" alt="" /></a>
+													<header>
+														<h3>Sync</h3>
+													</header>
+													<p>A real-time online video synchronization platform.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="sync.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="hands-on.html" class="image featured"><img src="images/handson.jpeg" alt="" /></a>
+													<header>
+														<h3>Hands On</h3>
+													</header>
+													<p>A human-computer interface that understands the user’s commands by analysing his hand-gestures</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="hands-on.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="arcade.html" class="image featured"><img src="images/arcade.jpg" alt="" /></a>
+													<header>
+														<h3>The Arcade Playground</h3>
+													</header>
+													<p>The old arcade games that we love in one website. Welcome to the Arcade Playground!</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="arcade.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="battle-of-wits.html" class="image featured"><img src="images/battleofwits.jpg" alt="" /></a>
+													<header>
+														<h3>Battle of Wits</h3>
+													</header>
+													<p>A battle royale card game</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="battle-of-wits.html" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+										</div>
+									</section>
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Footer -->
+				<section id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-4 col-12-medium">
+								<section>
+									<header>
+										<h2>Contact</h2>
+									</header>
+									<ul class="social">
+										<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
+										<li><a class="icon brands fa-github" href="https://www.github.com/aelkhamsi"><span class="label">Github</span></a></li>
+									</ul>
+									<ul class="contact">
+										<li>
+											<h3>Address</h3>
+											<p>
+												20 Avenue de Bardanac<br />
+												Batiment A, App AM33<br />
+												Pessac, 33600<br />
+												France
+											</p>
+										</li>
+										<li>
+											<h3>Mail</h3>
+											<p>aelkhamsi@enseirb-matmeca.fr</p>
+										</li>
+										<li>
+											<h3>Phone</h3>
+											<p>(+33) 761 376 899</p>
+										</li>
+									</ul>
+								</section>
+							</div>
+							<!-- <div class="col-12">
+
+									<div id="copyright">
+										<ul class="links">
+											<li>&copy; Untitled. All rights reserved.</li>
+										</ul>
+									</div>
+
+							</div> -->
+						</div>
+					</div>
+				</section>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
