--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Achraf El Khamsi</title>
+		<title>Sahar Javadzadeh</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -13,7 +13,7 @@
 			<section id="header">
 
 				<!-- Logo -->
-					<h1><a href="index.html">Achraf El Khamsi</a></h1>
+					<h1><a href="index.html">Sahar Javadzadeh</a></h1>
 
 				<!-- Nav -->
 				<nav id="nav">
@@ -93,43 +93,43 @@
 				</section>
 
 			<!-- Footer -->
-				<!-- Footer -->
-				<section id="footer">
-					<div class="container">
-						<div class="row">
-							<div class="col-4 col-12-medium">
-								<section>
-									<header>
-										<h2>Contact</h2>
-									</header>
-									<ul class="social">
-										<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
-										<li><a class="icon brands fa-github" href="https://www.github.com/aelkhamsi"><span class="label">Github</span></a></li>
-									</ul>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<p>
-												20 Avenue de Bardanac<br />
-												Batiment A, App AM33<br />
-												Pessac, 33600<br />
-												France
-											</p>
-										</li>
-										<li>
-											<h3>Mail</h3>
-											<p>aelkhamsi@enseirb-matmeca.fr</p>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<p>(+33) 761 376 899</p>
-										</li>
-									</ul>
-								</section>
-							</div>
+			<section id="footer">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-12-medium">
+							<section>
+								<header>
+									<h2>Contact</h2>
+								</header>
+								<ul class="social">
+									<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
+									<li><a class="icon brands fa-instagram" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
+									<li><a class="icon brands fa-facebook" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
+								</ul>
+								<ul class="contact">
+									<li>
+										<h3>Address</h3>
+										<p>
+											20 Avenue de Bardanac<br />
+											Batiment A, App AM31<br />
+											Pessac, 33600<br />
+											France
+										</p>
+									</li>
+									<li>
+										<h3>Mail</h3>
+										<p>aelkhamsi@enseirb-matmeca.fr</p>
+									</li>
+									<li>
+										<h3>Phone</h3>
+										<p>(+33) 761 376 899</p>
+									</li>
+								</ul>
+							</section>
 						</div>
 					</div>
-				</section>
+				</div>
+			</section>
 
 		</div>
 
