--- a/index.html
+++ b/index.html
@@ -19,19 +19,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="projects.html">Projects</a></li>
-
-								<!-- <li>
-									<a href="#">Projects</a>
-									<ul>
-										<li><a href="reversi-ai.html">Reversi AI</a></li>
-										<li><a href="sync.html">Sync</a></li>
-										<li><a href="compiler.html">Compiler / Interpreter</a></li>
-										<li><a href="hands-on.html">Hands On</a></li>
-										<li><a href="arcade.html">The Arcade Playground</a></li>
-										<li><a href="battle-of-wits.html">Battle of Wits</a></li>
-									</ul>
-								</li> -->
+								<li><a href="./projects.html">Projects</a></li>
 								<li><a href="#footer">Contact</a></li>
 								<li><a href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A11aea02d-6e28-44ba-a4c2-80465fd89757" target="_blank"><i class="far fa-file" style="margin-right:5px"></i> Resume</a></li>
 							</ul>
