--- a/index.html
+++ b/index.html
@@ -24,14 +24,6 @@
 								<li><a href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A11aea02d-6e28-44ba-a4c2-80465fd89757" target="_blank"><i class="far fa-file" style="margin-right:5px"></i> Resume</a></li>
 							</ul>
 						</nav>
-
-					<!-- Banner -->
-						<section id="banner">
-							<header>
-								<h2>Hello. I am Sahar.</h2>
-								<p>Engineering Student in Computer Science. </p>
-							</header>
-						</section>
 					
 				</section>
 
@@ -43,10 +35,7 @@
 
 								<!-- Portfolio -->
 									<section>
-										<header class="major">
-											<h2>About me</h2>
-										</header>
-
+										<p>Hello</p>
 										<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, quibusdam ullam ratione aspernatur aliquam necessitatibus dicta alias soluta mollitia minus nam assumenda illo, totam similique iusto corrupti aliquid nemo amet!</p>
 										<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, quibusdam ullam ratione aspernatur aliquam necessitatibus dicta alias soluta mollitia minus nam assumenda illo, totam similique iusto corrupti aliquid nemo amet!</p>
 
