--- a/projects.html
+++ b/projects.html
@@ -32,58 +32,59 @@
 				<section id="main">
 					<div class="container">
 
-							<article class="box post">
+							<article class="box post project">
 								<h2 style="margin-bottom: 20px">Title of the project</h2>
 									<header class="projects-header"> 
-										<h3>Description</h3>
+										<h3>Firm ABC</h3>
 										<div class="duration"> Jun 2018 - Sept 2018 </div> 
 									</header>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque a assumenda doloremque libero non similique dolores porro, veritatis veniam distinctio fugit voluptatibus, nam consequatur inventore cumque minima deleniti incidunt! Voluptatibus.</p>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque a assumenda doloremque libero non similique dolores porro, veritatis veniam distinctio fugit voluptatibus, nam consequatur inventore cumque minima deleniti incidunt! Voluptatibus.</p>
 
-									<header> <h3>Links</h3> </header>
-									<ul class="social">
-										<li><a class="icon brands fa-github" href="https://www.github.com/aelkhamsi/Sync"><span class="label">Github</span></a></li>
-									</ul>
+									<div class="links"> 
+										<h4 style="color: #D6404A">Links</h4>
+										<ul class="links-ul">
+											<li><a class="fa fa-link" href="https://www.github.com/aelkhamsi/Sync"><span class="label"></span></a></li>
+										</ul>
+									</div>
 							</article>
 
-							<article class="box post">
+							<article class="box post project">
 								<h2 style="margin-bottom: 20px">Title of the project</h2>
 									<header class="projects-header"> 
-										<h3>Description</h3>
+										<h3>Firm ABC</h3>
 										<div class="duration"> Jun 2018 - Sept 2018 </div> 
 									</header>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque a assumenda doloremque libero non similique dolores porro, veritatis veniam distinctio fugit voluptatibus, nam consequatur inventore cumque minima deleniti incidunt! Voluptatibus.</p>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque a assumenda doloremque libero non similique dolores porro, veritatis veniam distinctio fugit voluptatibus, nam consequatur inventore cumque minima deleniti incidunt! Voluptatibus.</p>
 
-									<header> <h3>Links</h3> </header>
-									<ul class="social">
-										<li><a class="icon brands fa-github" href="https://www.github.com/aelkhamsi/Sync"><span class="label">Github</span></a></li>
-									</ul>
+									<div class="links"> 
+										<h4 style="color: #D6404A">Links</h4>
+										<ul class="links-ul">
+											<li><a class="fa fa-link" href="https://www.github.com/aelkhamsi/Sync"><span class="label"></span></a></li>
+										</ul>
+									</div>
 							</article>
 
-							<article class="box post">
+							<article class="box post project">
 								<h2 style="margin-bottom: 20px">Title of the project</h2>
 									<header class="projects-header"> 
-										<h3>Description</h3>
+										<h3>Firm ABC</h3>
 										<div class="duration"> Jun 2018 - Sept 2018 </div> 
 									</header>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque a assumenda doloremque libero non similique dolores porro, veritatis veniam distinctio fugit voluptatibus, nam consequatur inventore cumque minima deleniti incidunt! Voluptatibus.</p>
 									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque a assumenda doloremque libero non similique dolores porro, veritatis veniam distinctio fugit voluptatibus, nam consequatur inventore cumque minima deleniti incidunt! Voluptatibus.</p>
 
-									<header> <h3>Links</h3> </header>
-									<ul class="social">
-										<li><a class="icon brands fa-github" href="https://www.github.com/aelkhamsi/Sync"><span class="label">Github</span></a></li>
-									</ul>
+									<div class="links"> 
+										<h4 style="color: #D6404A">Links</h4>
+										<ul class="links-ul">
+											<li><a class="fa fa-link" href="https://www.github.com/aelkhamsi/Sync"><span class="label"></span></a></li>
+										</ul>
+									</div>
 							</article>
 
 					</div>
 				</section>
-
-
-
-
-
 
 
 			<!-- Footer -->
