--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="./projects.html">Projects</a></li>
 								<li><a href="#footer">Contact</a></li>
-								<li><a href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A11aea02d-6e28-44ba-a4c2-80465fd89757" target="_blank"><i class="far fa-file" style="margin-right:5px"></i> Resume</a></li>
+								<li><a href="https://documentcloud.adobe.com/link/review?uri=urn:aaid:scds:US:b413417c-9791-4517-8dab-1fba8fc382d0" target="_blank"><i class="far fa-file" style="margin-right:5px"></i> Resume</a></li>
 							</ul>
 						</nav>
 					
@@ -35,10 +35,35 @@
 
 								<!-- Portfolio -->
 									<section>
-										<p>Hello</p>
-										<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, quibusdam ullam ratione aspernatur aliquam necessitatibus dicta alias soluta mollitia minus nam assumenda illo, totam similique iusto corrupti aliquid nemo amet!</p>
-										<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, quibusdam ullam ratione aspernatur aliquam necessitatibus dicta alias soluta mollitia minus nam assumenda illo, totam similique iusto corrupti aliquid nemo amet!</p>
+										<p>Hello and Welcome to my website</p>
+										<p>
+											Upon completing my master in <b>Economic Affairs</b> at Universite de Bordeaux and exploring the subjects which have boosted my critical analysis skills to scrutinize market behavior and business trends worldwide; 
+											I firmly believe that each communication opens a new window towards personal and collective growth.
+											I consider delivering added value to multicultural networking pivotal to the sustained success of any company. 
+										</p>
 
+										<p>
+											 I have previously graduated in <b>Master of Business Administration - Supply and Chain Management</b> from Science and Research university of Tehran in 2018. <br>
+											 Years of actively working in the <b>Sales and Marketing Department</b> of top ranked multinational cosmetics companies in the Middle East and my recent studies and projects in <b>Economies of Enterprises</b>  will be an asset helping find a job in a leading position in one of the famous parisian cosmetic companies. 
+										</p>
+
+									</section>
+
+									<section>
+										<h3 class="interest-fields">Interest Fields</h3>
+										<ul>
+											<li>International Business</li>
+											<li>International Marketing</li>
+											<li>Branding and Communication</li>
+										</ul>
+									</section>
+
+									<section>
+										<h3 class="interest-fields">Honors / Accomplishments</h3>
+										<ul>
+											<li> <span class="date">2011: </span> Mathematical programming of the 1st solar assisted Absorption Cooling System in Iran</li>
+											<li> <span class="date">2014: </span> Theoretical and Practical programming of the 1st Photo Voltaic Panels assisted Centrifugal Cooling Systems in Middle East </li>
+										</ul>
 									</section>
 
 							</div>
@@ -55,11 +80,11 @@
 									<header>
 										<h2>Contact</h2>
 									</header>
-									<ul class="social">
+									<!-- <ul class="social">
 										<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
 										<li><a class="icon brands fa-instagram" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
 										<li><a class="icon brands fa-facebook" href="https://www.linkedin.com/in/achrafelkhamsi"><span class="label">Linkedin</span></a></li>
-									</ul>
+									</ul> -->
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
@@ -72,11 +97,12 @@
 										</li>
 										<li>
 											<h3>Mail</h3>
-											<p>aelkhamsi@enseirb-matmeca.fr</p>
+											<p>seyedehsahar.javadzadehhaghighat@u-bordeaux.fr</p> 
+											<p>javadzadeh.sahar@gmail.com</p>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<p>(+33) 761 376 899</p>
+											<p>(+33) 755 191 906</p>
 										</li>
 									</ul>
 								</section>
